leptos_macro/tests/view/14_multiple_generic_params_second_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/view/14_multiple_generic_params_second_wrong_type.rs:11:43
   |
11 |             <Inner fun_a=|| true fun_b=|| true/>
   |                                           ^^^^ expected `i32`, found `bool`
